--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
