--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-router-dom": "^7.11.0",
-    "lucide-react": "^0.562.0"
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
